[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "einherjer"
authors = [
    {name = "Rainer Christian Bjoern Herold"}
]
description = "package description"
version = "0.8"
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp",
    "asyncssh==2.14.2",
    "crc==4.1.0",
    "haipy==1.5.1",
    "numpy",
    "opencv-python",
    "pandas",
    "Pillow",
    "pycurl==7.45.2",
    "pykeepass==4.0.3",
    "pypandoc==1.11",
    "pysnmp==4.4.12",
    "PySocks==1.7.1",
    "python-docx",
    "pyyaml",
    "pyzbar==0.1.9",
    "pyzipper==0.3.6",
    "requests",
    "requests-pkcs12==1.15",
    "rich==13.5.2",
    "scapy==2.5.0",
    "selenium",
    "selenium-wire==5.1.0",
    "sslyze",
    "stdiomask==0.0.4",
    "tqdm==4.66.3",
    "webdriver-manager==3.8.5",
    "XlsxWriter==3.0.2"
]
maintainers = [
    {name = "Rainer Christian Bjoern Herold"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://github.com/Jarl-Bjoern/Einherjer"
Documentation = "https://github.com/Jarl-Bjoern/Einherjer/wiki"
Repository = "https://github.com/Jarl-Bjoern/Einherjer.git"
Issues = "https://github.com/Jarl-Bjoern/Einherjer/issues"
Changelog = "https://github.com/Jarl-Bjoern/Einherjer/blob/main/Changelog/Changelog.md"
